# sokol_metal

./: .gitignore  CHANGELOG.md  README.md  sokol_app.h  sokol_app.h.backup  sokol_args.h  sokol_audio.h  sokol_fetch.h  sokol_gfx.h  sokol_gfx.h.backup  sokol_gfx.h.pre_dispatcher_cleanup  sokol_glue.h  sokol_log.h  sokol_time.h
tests/: CMakeLists.txt
tests/compile/: CMakeLists.txt  sokol_imgui.c  sokol_nuklear.c
tests/functional/: CMakeLists.txt  force_metal_backend.h  sokol_audio_test.c  sokol_gfx_test.c
util/: sokol_debugtext.h  sokol_fontstash.h  sokol_gl.h  sokol_imgui.h  sokol_nuklear.h  sokol_spine.h
